[tool.poetry]
name = "test_executable_component"
version = "0.1.0"
description = ""
authors = ["Niels-Oliver Walkowski <niels-oliver.walkowski@uni.lu>"]

[tool.poetry.dependencies]
python = "^3.8"
nbinteract = "^0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
